<resources>
    <string name="app_name">Launcher_tw</string>
    <string name="app_not_install">該應用尚未安裝!</string>
    <string name="tv_camera">前鏡頭</string>
    <string name="tv_file_manager">文件管理器</string>
    <string name="tv_wifi">WIFI熱點</string>
    <string name="tv_bt">藍牙</string>
    <string name="tv_playback">影像庫</string>
    <string name="tv_app_list">應用列表</string>
    <string name="tv_settings">設定</string>
    <string name="settings_link">連線配對</string>
    <string name="settings_screen">螢幕音量</string>
    <string name="settings_adas">輔助駕駛</string>
    <string name="settings_other">其他</string>
    <string name="other_adas">碰撞鎖定</string>
    <string name="other_recording_time">錄影片段長度</string>
    <string name="adas_speed_warning">測速照相提醒</string>
    <string name="adas_speeding_warning">Speeding warning</string>
    <string name="adas_switch_off">關閉</string>
    <string name="adas_switch_original">原速</string>
    <string name="adas_switch_speed_10">限速+10</string>
    <string name="adas_switch_speed_5">限速+5</string>
    <string name="adas_driving_detection">智慧駕駛偵測</string>
    <string name="adas_warning_interval">警示間隔</string>
    <string name="warning_interval_close">不限</string>
    <string name="warning_interval_5">5分钟</string>
    <string name="warning_interval_10">10分钟</string>
    <string name="adas_warning_mode">警示方式</string>
    <string name="warning_mode_wisdom">智慧提醒</string>
    <string name="warning_mode_picture_flickers">畫面閃爍</string>
    <string name="warning_mode_beep">蜂鳴聲</string>
    <string name="screen_auto">螢幕自動關閉</string>
    <string name="screen_mode_saver">螢幕保護</string>
    <string name="screen_mode_light">恆亮</string>
    <string name="screen_mode_close">無畫面</string>
    <string name="standby_time_tile">待機時間</string>
    <string name="standby_time_1">1 分鐘</string>
    <string name="standby_time_3">3 分鐘</string>
    <string name="standby_time_5">5 分鐘</string>
    <string name="screen_brightness_title">螢幕亮度</string>
    <string name="volume_adjustment_title">音量調節</string>
    <string name="settings_link_qr_code">裝置 QR code</string>
    <string name="setings_link_title">連線</string>
    <string name="setings_gps">GPS</string>
    <string name="setings_4g">4G</string>
    <string name="close_gps">關閉GPS</string>
    <string name="close_gps_message">關閉後將無法追蹤定位。</string>
    <string name="cancel">取消</string>
    <string name="ok">確定</string>
    <string name="settings_other_format_sd_card">格式化記憶卡</string>
    <string name="format_message">格式化後，記憶卡內資料將被清除。</string>
    <string name="close_4g">關閉4G網路</string>
    <string name="close_4g_message">關閉後將無連線功能。</string>
    <string name="no_sim_card">未檢測到SIM卡</string>
    <string name="state_on">已開啟</string>
    <string name="state_off">已關閉</string>
    <string name="device_control">裝置操作</string>
    <string name="tv_other_settings">系統設定</string>
    <string name="no_sd_card">未檢測到SD卡</string>
    <string name="stop_record_title">Stop recording</string>
    <string name="stop_record_message">The recording function will stop. Are you sure you want to stop recording?</string>
</resources>
