<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsItemStyle"
    android:orientation="vertical">

    <LinearLayout
        style="@style/SettingsRowLayoutStyle"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsTitleStyle"
            android:text="@string/adas_speed_warning" />

        <Switch
            android:id="@+id/switch_speed"
            style="@style/SwitchStyle"
            android:layout_marginStart="@dimen/itemVertical" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/shape_linearlayout_divider_v" />

    <!--    <LinearLayout
            style="@style/SettingsRowLayoutStyle"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                style="@style/SettingsTitleStyle"
                android:text="@string/adas_speeding_warning" />-->

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/SettingsRowLayoutStyle">

        <TextView
            android:id="@+id/tv_limit_title"
            style="@style/SettingsTitleStyle"
            android:text="@string/adas_speeding_warning"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rb_limit_close"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rb_limit_close"
            style="@style/RadioButtonStyle"
            android:layout_marginTop="12dp"
            android:text="@string/adas_switch_off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rb_limit_0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_limit_title" />

        <RadioButton
            android:id="@+id/rb_limit_0"
            style="@style/RadioButtonStyle"
            android:layout_gravity="center"
            android:text="@string/adas_switch_original"
            app:layout_constraintBottom_toBottomOf="@id/rb_limit_close"
            app:layout_constraintEnd_toStartOf="@id/rb_limit_5"
            app:layout_constraintStart_toEndOf="@id/rb_limit_close"
            app:layout_constraintTop_toTopOf="@id/rb_limit_close" />

        <RadioButton
            android:id="@+id/rb_limit_5"
            style="@style/RadioButtonStyle"
            android:layout_gravity="center"
            android:text="@string/adas_switch_speed_5"
            app:layout_constraintBottom_toBottomOf="@id/rb_limit_close"
            app:layout_constraintEnd_toStartOf="@id/rb_limit_10"
            app:layout_constraintStart_toEndOf="@id/rb_limit_0"
            app:layout_constraintTop_toTopOf="@id/rb_limit_close" />

        <RadioButton
            android:id="@+id/rb_limit_10"
            style="@style/RadioButtonStyle"
            android:layout_gravity="end"
            android:text="@string/adas_switch_speed_10"
            app:layout_constraintBottom_toBottomOf="@id/rb_limit_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/rb_limit_5"
            app:layout_constraintTop_toTopOf="@id/rb_limit_close" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_limit_close"
                    style="@style/RadioButtonStyle"
                    android:layout_gravity="start"
                    android:text="@string/adas_switch_off" />

                <RadioButton
                    android:id="@+id/rb_limit_0"
                    style="@style/RadioButtonStyle"
                    android:layout_gravity="center"
                    android:text="@string/adas_switch_original" />

                <RadioButton
                    android:id="@+id/rb_limit_5"
                    style="@style/RadioButtonStyle"
                    android:layout_gravity="center"
                    android:text="@string/adas_switch_speed_5" />

                <RadioButton
                    android:layout_gravity="end"
                    android:id="@+id/rb_limit_10"
                    style="@style/RadioButtonStyle"
                    android:text="@string/adas_switch_speed_10" />
            </LinearLayout>-->
    <!--    </LinearLayout>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/shape_linearlayout_divider_v" />

    <LinearLayout
        style="@style/SettingsRowLayoutStyle"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsTitleStyle"
            android:text="@string/adas_driving_detection" />

        <Switch
            android:id="@+id/switch_driving_detection"
            style="@style/SwitchStyle"
            android:layout_marginStart="@dimen/itemVertical" />
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsRowLayoutStyle"
        android:gravity="center_vertical">

        <TextView
            style="@style/SettingsTitleStyle"
            android:text="@string/adas_warning_interval" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_warning_interval_close"
                style="@style/RadioButtonStyle"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/warning_interval_close" />

            <RadioButton
                android:id="@+id/rb_warning_interval_5"
                style="@style/RadioButtonStyle"
                android:layout_centerInParent="true"
                android:text="@string/warning_interval_5" />

            <RadioButton
                android:id="@+id/rb_warning_interval_10"
                style="@style/RadioButtonStyle"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/warning_interval_10" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsRowLayoutStyle"
        android:gravity="center_vertical">

        <TextView
            style="@style/SettingsTitleStyle"
            android:text="@string/adas_warning_mode" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_warning_mode_wisdom"
                style="@style/RadioButtonStyle"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/warning_mode_wisdom" />

            <RadioButton
                android:id="@+id/rb_warning_mode_picture_flickers"
                style="@style/RadioButtonStyle"
                android:layout_centerInParent="true"
                android:text="@string/warning_mode_picture_flickers" />

            <RadioButton
                android:id="@+id/rb_warning_mode_beep"
                style="@style/RadioButtonStyle"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/warning_mode_beep" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>