<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_hone_bg"
    android:padding="5dp">

    <RelativeLayout
        android:id="@+id/rl_gps_speed"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:background="@drawable/zx_v9_speed_en2"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/rl_camera"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_gps_speed"
            style="@style/HomeButtonStyle"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_camera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/zx_v9_navi_en2"
        app:layout_constraintBottom_toTopOf="@id/rl_bt"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/rl_gps_speed"
        app:layout_constraintRight_toLeftOf="@id/rl_wifi"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <TextView
            style="@style/HomeButtonStyle"
            android:text="@string/tv_camera" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_wifi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/zx_v9_wifi_en2"
        app:layout_constraintBottom_toBottomOf="@id/rl_camera"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/rl_camera"
        app:layout_constraintRight_toLeftOf="@id/rl_file"
        app:layout_constraintTop_toTopOf="@id/rl_camera">

        <TextView
            style="@style/HomeButtonStyle"
            android:text="@string/tv_wifi" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_file"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/zx_v9_file_en2"
        app:layout_constraintBottom_toBottomOf="@id/rl_camera"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/rl_wifi"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/rl_camera">

        <TextView
            style="@style/HomeButtonStyle"
            android:text="@string/tv_file_manager" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/zx_v9_blue_en2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="@id/rl_camera"
        app:layout_constraintRight_toRightOf="@id/rl_camera"
        app:layout_constraintTop_toBottomOf="@id/rl_camera"
        app:layout_constraintVertical_weight="1">

        <TextView
            style="@style/HomeButtonStyle"
            android:text="@string/tv_bt" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_video"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/zx_v9_video_en2"
        app:layout_constraintBottom_toBottomOf="@id/rl_bt"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="@id/rl_wifi"
        app:layout_constraintRight_toRightOf="@id/rl_wifi"
        app:layout_constraintTop_toTopOf="@id/rl_bt"
        app:layout_constraintVertical_weight="1">

        <TextView
            style="@style/HomeButtonStyle"
            android:text="@string/tv_playback" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_app"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/zx_v9_applist_en2"
        app:layout_constraintBottom_toBottomOf="@id/rl_bt"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="@id/rl_file"
        app:layout_constraintRight_toRightOf="@id/rl_file"
        app:layout_constraintTop_toTopOf="@id/rl_bt"
        app:layout_constraintVertical_weight="1">

        <TextView
            style="@style/HomeButtonStyle"
            android:text="@string/tv_app_list" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>